got empty activity working 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidSSHCommandSender</string>
+    <string name="test_string">HELLO WORLD</string>
 </resources>
