--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">AndroidSSHCommandSender</string>
-    <string name="test_string">HELLO WORLD</string>
+    <string name="address_label">Endpoint address:</string>
+    <string name="address_hint">xxx.xxx.xxx.xxx</string>
+    <string name="username_label">Username:</string>
+    <string name="username_hint">admin</string>
+    <string name="password_label">Password:</string>
+    <string name="password_hint">********</string>
+    <string name="commands_label">Command to send:</string>
+    <string name="commands_hint">sudo shutdown</string>
+    <string name="send_btn">Send Command</string>
 </resources>
