--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndroidSSHCommandSender</string>
+    <string name="app_name">SSHCommandSender</string>
     <string name="address_label">Endpoint address:</string>
     <string name="address_hint">xxx.xxx.xxx.xxx</string>
     <string name="port_label">SSH port:</string>
@@ -19,4 +19,12 @@
     <string name="password_error_empty">PASSWORD REQUIRED</string>
     <string name="command_error_empty">COMMAND REQUIRED</string>
     <string name="output_label">Output:</string>
+    <string name="send_success">SENT SUCCESSFULLY</string>
+    <string name="send_failed">FAILED TO SEND</string>
+    <string name="connected">Connected Successfully</string>
+    <string name="not_connected">Connection Failed</string>
+    <string name="type_info">INFO</string>
+    <string name="type_error">ERROR</string>
+    <string name="log_pattern">\n[APP] - %s\n</string>
+    <string name="log_type_pattern">\n[APP]:[%s] - %s\n</string>
 </resources>
